--- a/D3_data_journalism/assets/css/style.css
+++ b/D3_data_journalism/assets/css/style.css
@@ -29,3 +29,18 @@ body {
   margin: 0;
   font-size: 16px;
 }
+
+.svg-container {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  padding-bottom: 80%; /* aspect ratio */
+  vertical-align: left;
+  overflow: hidden;
+}
+.svg-content-responsive {
+  display: inline-block;
+  position: absolute;
+  top: 10px;
+  left: 0;
+}
